--- a/Index.html
+++ b/Index.html
@@ -8,16 +8,19 @@
     <style>
         body { text-align: center; font-family: Arial, sans-serif; background-color: #87CEEB; overflow: hidden; }
         #game-container { position: relative; width: 100vw; height: 80vh; }
-        #sky { background-color: #87CEEB; height: 50%; position: relative; }
+        #sky { background-color: #87CEEB; height: 50%; position: relative; overflow: hidden; }
         #sun { position: absolute; top: 10px; left: 0; font-size: 40px; transition: left 45s linear; }
+        .cloud { position: absolute; top: 20px; font-size: 30px; opacity: 0.8; }
         #water { background-color: #1E90FF; height: 50%; position: relative; }
-        #boat { position: absolute; top: 45%; left: 50%; transform: translate(-50%, -50%); font-size: 50px; }
+        #boat { position: absolute; bottom: 98%; left: 50%; transform: translate(-50%, 0); font-size: 50px; }
         .fish { position: absolute; font-size: 40px; cursor: pointer; animation: swim 5s infinite linear alternate; }
         @keyframes swim { from { transform: translateX(-50px); } to { transform: translateX(50px); } }
         #fish-tank { margin-top: 20px; font-size: 20px; }
         #market-screen { display: none; }
-        .meter-container { display: none; width: 200px; height: 20px; background-color: red; margin: auto; position: relative; }
-        .meter-bar { width: 30px; height: 100%; background-color: green; position: absolute; left: 0; transition: left 1s linear; }
+        .meter-container { display: none; width: 200px; height: 20px; background-color: red; margin: auto; position: relative; border-radius: 10px; }
+        .meter-bar { width: 50px; height: 100%; background-color: green; position: absolute; left: 75px; }
+        .rod { position: absolute; top: 0; left: 0; font-size: 25px; transition: left 0.2s linear; }
+        .button { display: inline-block; padding: 10px 20px; background-color: #007BFF; color: white; border-radius: 5px; cursor: pointer; margin: 10px; }
     </style>
 </head>
 <body>
@@ -25,39 +28,40 @@
     <div id="game-container">
         <div id="sky">
             <div id="sun">🌞</div>
+            <div class="cloud" style="left: 20%;">☁️</div>
+            <div class="cloud" style="left: 60%;">☁️</div>
         </div>
         <div id="water">
             <div id="boat">🚤</div>
         </div>
     </div>
     <div id="fish-tank">Fish Tank: <span id="caught-fish"></span></div>
-    <button onclick="goToMarket()">Go to Market</button>
+    <div class="button" onclick="goToMarket()">Go to Market</div>
     <div id="market-screen">
         <h2>Market</h2>
         <div id="market-fish"></div>
         <p>Money: $<span id="money">0</span></p>
-        <button onclick="buyBoat(1000, '⛵')">Buy ⛵ (1,000)</button>
-        <button onclick="buyBoat(100000, '🚢')">Buy 🚢 (100,000)</button>
-        <button onclick="startNewDay()">Start New Day</button>
+        <div class="button" onclick="startNewDay()">Start New Day</div>
     </div>
     <div class="meter-container" id="meter-container">
-        <div class="meter-bar" id="meter"></div>
+        <div class="meter-bar"></div>
+        <div class="rod" id="rod">🎣</div>
     </div>
     <script>
         let money = parseInt(localStorage.getItem("money")) || 0;
         let boat = localStorage.getItem("boat") || "🚤";
-        let fishTypes = { "🚤": ["🐟"], "⛵": ["🐟", "🐠"], "🚢": ["🐟", "🐠", "🦈"] };
-        document.getElementById("boat").innerText = boat;
-        document.getElementById("money").innerText = money;
         let caughtFish = [];
         let fishing = false;
+        let rodMovingRight = true;
+        document.getElementById("boat").innerText = boat;
+        document.getElementById("money").innerText = money;
         function spawnFish() {
             document.getElementById("water").innerHTML = '<div id="boat">' + boat + '</div>';
             let water = document.getElementById("water");
             for (let i = 0; i < 5; i++) {
                 let fish = document.createElement("div");
                 fish.classList.add("fish");
-                fish.innerText = fishTypes[boat][Math.floor(Math.random() * fishTypes[boat].length)];
+                fish.innerText = "🐟";
                 fish.style.top = Math.random() * 40 + 10 + "%";
                 fish.style.left = Math.random() * 90 + "%";
                 fish.onclick = () => startFishing(fish);
@@ -69,17 +73,20 @@
             fishing = true;
             fish.style.animation = "shake 0.5s infinite";
             document.getElementById("meter-container").style.display = "block";
-            let meter = document.getElementById("meter");
+            let rod = document.getElementById("rod");
             let interval = setInterval(() => {
-                let position = Math.random() * 170;
-                meter.style.left = position + "px";
-            }, 500);
+                let pos = parseInt(rod.style.left) || 0;
+                if (rodMovingRight) pos += 10;
+                else pos -= 10;
+                if (pos >= 170 || pos <= 0) rodMovingRight = !rodMovingRight;
+                rod.style.left = pos + "px";
+            }, 100);
             setTimeout(() => {
                 clearInterval(interval);
-                let pos = parseInt(meter.style.left);
+                let rodPos = parseInt(rod.style.left);
                 fishing = false;
                 document.getElementById("meter-container").style.display = "none";
-                if (pos > 70 && pos < 130) {
+                if (rodPos > 75 && rodPos < 125) {
                     caughtFish.push(fish.innerText);
                     document.getElementById("caught-fish").innerText = caughtFish.join(" ");
                 }
@@ -89,29 +96,6 @@
         function goToMarket() {
             document.getElementById("game-container").style.display = "none";
             document.getElementById("market-screen").style.display = "block";
-            let market = document.getElementById("market-fish");
-            market.innerHTML = "";
-            caughtFish.forEach(fish => {
-                let item = document.createElement("div");
-                item.innerText = fish + " - $100";
-                item.onclick = () => {
-                    money += 100;
-                    document.getElementById("money").innerText = money;
-                    item.remove();
-                    localStorage.setItem("money", money);
-                };
-                market.appendChild(item);
-            });
-        }
-        function buyBoat(cost, newBoat) {
-            if (money >= cost) {
-                money -= cost;
-                boat = newBoat;
-                localStorage.setItem("money", money);
-                localStorage.setItem("boat", boat);
-                document.getElementById("money").innerText = money;
-                document.getElementById("boat").innerText = boat;
-            }
         }
         function startNewDay() {
             document.getElementById("market-screen").style.display = "none";
