--- a/Index.html
+++ b/Index.html
@@ -8,60 +8,73 @@
     <style>
         body { text-align: center; font-family: Arial, sans-serif; background-color: #87CEEB; overflow: hidden; }
         #game-container { position: relative; width: 100vw; height: 80vh; }
-        #sky { background-color: #87CEEB; height: 50%; position: relative; overflow: hidden; }
-        #sun { position: absolute; top: 10px; left: 0; font-size: 40px; transition: left 45s linear; }
-        .cloud { position: absolute; top: 20px; font-size: 30px; opacity: 0.8; }
+        #sky { background-color: #87CEEB; height: 50%; position: relative; }
+        #clock { position: absolute; top: 10px; right: 10px; font-size: 40px; }
         #water { background-color: #1E90FF; height: 50%; position: relative; }
-        #boat { position: absolute; bottom: 98%; left: 50%; transform: translate(-50%, 0); font-size: 50px; }
+        #boat { position: absolute; bottom: 50%; left: 50%; transform: translate(-50%, 50%); font-size: 50px; }
         .fish { position: absolute; font-size: 40px; cursor: pointer; animation: swim 5s infinite linear alternate; }
         @keyframes swim { from { transform: translateX(-50px); } to { transform: translateX(50px); } }
         #fish-tank { margin-top: 20px; font-size: 20px; }
         #market-screen { display: none; }
-        .meter-container { display: none; width: 200px; height: 20px; background-color: red; margin: auto; position: relative; border-radius: 10px; }
-        .meter-bar { width: 50px; height: 100%; background-color: green; position: absolute; left: 75px; }
-        .rod { position: absolute; top: 0; left: 0; font-size: 25px; transition: left 0.2s linear; }
-        .button { display: inline-block; padding: 10px 20px; background-color: #007BFF; color: white; border-radius: 5px; cursor: pointer; margin: 10px; }
+        .meter-container { display: none; width: 200px; height: 20px; background-color: red; margin: auto; position: relative; }
+        .meter-bar { width: 30px; height: 100%; background-color: green; position: absolute; left: 85px; }
+        .rod-icon { position: absolute; font-size: 30px; transition: left 0.2s linear; }
+        .button { display: block; padding: 10px; background: white; border: 2px solid black; margin: 10px auto; cursor: pointer; width: 150px; }
+        .clouds { position: absolute; top: 10%; left: 10%; font-size: 40px; }
     </style>
 </head>
 <body>
     <h1 class="text-3xl font-bold">🎣 Emoji Fishing Game</h1>
     <div id="game-container">
         <div id="sky">
-            <div id="sun">🌞</div>
-            <div class="cloud" style="left: 20%;">☁️</div>
-            <div class="cloud" style="left: 60%;">☁️</div>
+            <div id="clock">🕕</div>
+            <div class="clouds">☁️ ☁️ ☁️</div>
         </div>
         <div id="water">
             <div id="boat">🚤</div>
         </div>
     </div>
     <div id="fish-tank">Fish Tank: <span id="caught-fish"></span></div>
-    <div class="button" onclick="goToMarket()">Go to Market</div>
+    <button class="button" onclick="goToMarket()">Go to Market</button>
     <div id="market-screen">
         <h2>Market</h2>
         <div id="market-fish"></div>
         <p>Money: $<span id="money">0</span></p>
-        <div class="button" onclick="startNewDay()">Start New Day</div>
+        <button class="button" onclick="buyBoat(1000, '⛵')">Buy ⛵ (1,000)</button>
+        <button class="button" onclick="buyBoat(100000, '🚢')">Buy 🚢 (100,000)</button>
+        <button class="button" onclick="startNewDay()">Start New Day</button>
     </div>
     <div class="meter-container" id="meter-container">
-        <div class="meter-bar"></div>
-        <div class="rod" id="rod">🎣</div>
+        <p id="fishing-status">Click the rod to catch the fish</p>
+        <div class="meter-bar" id="meter"></div>
+        <div class="rod-icon" id="rod">🎣</div>
     </div>
     <script>
         let money = parseInt(localStorage.getItem("money")) || 0;
         let boat = localStorage.getItem("boat") || "🚤";
-        let caughtFish = [];
-        let fishing = false;
-        let rodMovingRight = true;
+        let fishTypes = { "🚤": ["🐟"], "⛵": ["🐟", "🐠"], "🚢": ["🐟", "🐠", "🦈"] };
         document.getElementById("boat").innerText = boat;
         document.getElementById("money").innerText = money;
+        let caughtFish = [];
+        let fishing = false;
+        let hour = 6;
+        function updateClock() {
+            document.getElementById("clock").innerText = `🕑`.replace('2', hour);
+            hour++;
+            if (hour > 18) {
+                alert("Day Over");
+                goToMarket();
+            } else {
+                setTimeout(updateClock, 10000);
+            }
+        }
         function spawnFish() {
             document.getElementById("water").innerHTML = '<div id="boat">' + boat + '</div>';
             let water = document.getElementById("water");
             for (let i = 0; i < 5; i++) {
                 let fish = document.createElement("div");
                 fish.classList.add("fish");
-                fish.innerText = "🐟";
+                fish.innerText = fishTypes[boat][Math.floor(Math.random() * fishTypes[boat].length)];
                 fish.style.top = Math.random() * 40 + 10 + "%";
                 fish.style.left = Math.random() * 90 + "%";
                 fish.onclick = () => startFishing(fish);
@@ -71,50 +84,36 @@
         function startFishing(fish) {
             if (fishing) return;
             fishing = true;
-            fish.style.animation = "shake 0.5s infinite";
             document.getElementById("meter-container").style.display = "block";
             let rod = document.getElementById("rod");
+            let movingRight = true;
             let interval = setInterval(() => {
-                let pos = parseInt(rod.style.left) || 0;
-                if (rodMovingRight) pos += 10;
-                else pos -= 10;
-                if (pos >= 170 || pos <= 0) rodMovingRight = !rodMovingRight;
-                rod.style.left = pos + "px";
-            }, 100);
+                let pos = parseInt(rod.style.left || "0");
+                if (movingRight) {
+                    rod.style.left = pos + 20 + "px";
+                    if (pos >= 140) movingRight = false;
+                } else {
+                    rod.style.left = pos - 20 + "px";
+                    if (pos <= 0) movingRight = true;
+                }
+            }, 200);
             setTimeout(() => {
                 clearInterval(interval);
-                let rodPos = parseInt(rod.style.left);
+                let pos = parseInt(rod.style.left);
                 fishing = false;
                 document.getElementById("meter-container").style.display = "none";
-                if (rodPos > 75 && rodPos < 125) {
+                if (pos > 85 && pos < 115) {
+                    document.getElementById("fishing-status").innerText = "Fish Caught ✅";
                     caughtFish.push(fish.innerText);
                     document.getElementById("caught-fish").innerText = caughtFish.join(" ");
+                } else {
+                    document.getElementById("fishing-status").innerText = "Lost Fish 🛑";
                 }
                 fish.remove();
             }, 2000);
         }
-        function goToMarket() {
-            document.getElementById("game-container").style.display = "none";
-            document.getElementById("market-screen").style.display = "block";
-        }
-        function startNewDay() {
-            document.getElementById("market-screen").style.display = "none";
-            document.getElementById("game-container").style.display = "block";
-            caughtFish = [];
-            document.getElementById("caught-fish").innerText = "";
-            spawnFish();
-        }
-        function startDayNightCycle() {
-            let sun = document.getElementById("sun");
-            sun.style.left = "100%";
-            setTimeout(() => {
-                document.getElementById("sky").style.backgroundColor = "#2c3e50";
-                alert("Day Over");
-                goToMarket();
-            }, 45000);
-        }
+        updateClock();
         spawnFish();
-        startDayNightCycle();
     </script>
 </body>
 </html>
