--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,20 @@
         document.getElementById("boat").innerText = boat;
         document.getElementById("money").innerText = money;
         let caughtFish = [];
-        function startFishingGame() {
+        function spawnFish() {
+            document.getElementById("water").innerHTML = '<div id="boat">' + boat + '</div>';
+            let water = document.getElementById("water");
+            for (let i = 0; i < 5; i++) {
+                let fish = document.createElement("div");
+                fish.classList.add("fish");
+                fish.innerText = fishTypes[boat][Math.floor(Math.random() * fishTypes[boat].length)];
+                fish.style.top = Math.random() * 40 + 10 + "%";
+                fish.style.left = Math.random() * 90 + "%";
+                fish.onclick = () => startFishingGame(fish);
+                water.appendChild(fish);
+            }
+        }
+        function startFishingGame(fish) {
             document.getElementById("fishing-grid-container").style.display = "block";
             let grid = document.getElementById("fishing-grid");
             grid.innerHTML = "";
@@ -73,25 +86,26 @@
                     setTimeout(() => {
                         cell.classList.add("shake");
                         setTimeout(() => {
-                            cell.innerText = fishTypes[boat][Math.floor(Math.random() * fishTypes[boat].length)];
-                            cell.onclick = () => catchFish(cell, true);
+                            cell.innerText = fish.innerText;
+                            cell.onclick = () => catchFish(cell, true, fish);
                         }, Math.random() * 975 + 25);
                     }, Math.random() * 975 + 25);
                 } else {
-                    cell.onclick = () => catchFish(cell, false);
+                    cell.onclick = () => catchFish(cell, false, fish);
                 }
                 grid.appendChild(cell);
             }
         }
-        function catchFish(cell, success) {
+        function catchFish(cell, success, fish) {
             document.getElementById("fishing-grid-container").style.display = "none";
             if (success) {
-                caughtFish.push(cell.innerText);
+                caughtFish.push(fish.innerText);
                 document.getElementById("caught-fish").innerText = caughtFish.join(" ");
                 document.getElementById("fishing-status").innerText = "Fish Caught! ✅";
             } else {
                 document.getElementById("fishing-status").innerText = "Fish Got Away! 🛑";
             }
+            fish.remove();
         }
         function updateDayBar() {
             let bar = document.getElementById("day-bar");
@@ -108,7 +122,7 @@
             }, 1200);
         }
         updateDayBar();
-        startFishingGame();
+        spawnFish();
     </script>
 </body>
 </html>
