--- a/Index.html
+++ b/Index.html
@@ -44,14 +44,14 @@
         <div id="fishing-grid"></div>
     </div>
     <div id="fish-tank">Fish Tank: <span id="caught-fish"></span></div>
-    <button class="button" id="market-btn">Go to Market</button>
+    <button class="button" onclick="goToMarket()">Go to Market</button>
     <div id="market-screen">
         <h2>Market</h2>
         <div id="market-fish"></div>
         <p>Money: $<span id="money">0</span></p>
-        <button class="button" id="buy-boat-small">Buy ⛵ (1,000)</button>
-        <button class="button" id="buy-boat-large">Buy 🚢 (100,000)</button>
-        <button class="button" id="new-day-btn">Start New Day</button>
+        <button class="button" onclick="buyBoat(1000, '⛵')">Buy ⛵ (1,000)</button>
+        <button class="button" onclick="buyBoat(100000, '🚢')">Buy 🚢 (100,000)</button>
+        <button class="button" onclick="startNewDay()">Start New Day</button>
     </div>
     <script>
         let money = parseInt(localStorage.getItem("money")) || 0;
@@ -60,11 +60,6 @@
         document.getElementById("boat").innerText = boat;
         document.getElementById("money").innerText = money;
         let caughtFish = [];
-
-        document.getElementById("market-btn").addEventListener("click", goToMarket);
-        document.getElementById("buy-boat-small").addEventListener("click", () => buyBoat(1000, '⛵'));
-        document.getElementById("buy-boat-large").addEventListener("click", () => buyBoat(100000, '🚢'));
-        document.getElementById("new-day-btn").addEventListener("click", startNewDay);
 
         function updateDayBar() {
             let bar = document.getElementById("day-bar");
@@ -90,7 +85,7 @@
                 fish.innerText = fishTypes[boat][Math.floor(Math.random() * fishTypes[boat].length)];
                 fish.style.top = Math.random() * 40 + 10 + "%";
                 fish.style.left = Math.random() * 90 + "%";
-                fish.addEventListener("click", () => startFishingGame(fish));
+                fish.setAttribute("onclick", "startFishingGame(this)");
                 water.appendChild(fish);
             }
         }
