--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,7 @@
         #sky { background-color: #87CEEB; height: 45%; position: relative; }
         #water { background-color: #1E90FF; height: 55%; position: relative; }
         #boat { position: absolute; top: 5%; left: 5%; font-size: 50px; }
-        .fish { position: absolute; font-size: 40px; cursor: pointer; animation: swim 5s infinite linear alternate; }
-        @keyframes swim { from { transform: translateX(-50px); } to { transform: translateX(50px); } }
+        .fish { position: absolute; font-size: 40px; cursor: pointer; }
         #fish-tank { margin-top: 10px; font-size: 20px; position: relative; z-index: 2; }
         #market-screen { display: none; }
         .button { display: block; padding: 10px; background: white; border: 2px solid black; margin: 10px auto; cursor: pointer; width: 150px; }
