--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,15 @@
     <style>
         body { text-align: center; font-family: Arial, sans-serif; background-color: #87CEEB; overflow: hidden; }
         #game-container { position: relative; width: 100vw; height: 75vh; }
-        #sky { background-color: #87CEEB; height: 45%; position: relative; }
+        #sky { background-color: #87CEEB; height: 45%; position: relative; display: flex; justify-content: space-around; align-items: center; padding: 10px; }
+        .cloud { font-size: 40px; }
         #water { background-color: #1E90FF; height: 55%; position: relative; }
-        #boat { position: absolute; top: 5%; left: 5%; font-size: 50px; }
+        #boat { position: absolute; bottom: 0; left: 5%; font-size: 50px; }
         .fish { position: absolute; font-size: 40px; cursor: pointer; }
         #fish-tank { margin-top: 10px; font-size: 20px; position: relative; z-index: 2; }
         #market-screen { display: none; }
         .button { display: block; padding: 10px; background: white; border: 2px solid black; margin: 10px auto; cursor: pointer; width: 150px; }
-        .clouds { position: absolute; top: 10%; left: 10%; font-size: 40px; }
-        #fishing-grid-container { display: none; position: absolute; top: 30%; left: 50%; transform: translate(-50%, -50%); }
+        #fishing-grid-container { display: none; position: absolute; top: 25%; left: 50%; transform: translate(-50%, -50%); }
         #fishing-grid { display: grid; grid-template-columns: repeat(3, 50px); grid-gap: 5px; justify-content: center; }
         .grid-cell { width: 50px; height: 50px; font-size: 40px; display: flex; align-items: center; justify-content: center; cursor: pointer; }
     </style>
@@ -25,7 +25,10 @@
     <h1 class="text-3xl font-bold">🎣 Emoji Fishing Game</h1>
     <div id="game-container">
         <div id="sky">
-            <div class="clouds">☁️ ☁️ ☁️</div>
+            <div class="cloud">☁️</div>
+            <div class="cloud">☁️</div>
+            <div class="cloud">☁️</div>
+            <div class="cloud">☁️</div>
         </div>
         <div id="water">
             <div id="boat">🚤</div>
